fix the theme layout for the header

--- a/css/profile-dark-components-style.css
+++ b/css/profile-dark-components-style.css
@@ -1,6 +1,6 @@
 /* Header components */
 .dark-theme header.header-main {
-    background: #3e3e3e;
+    background: #161c25;
     color: #fff;
 }
 .dark-theme .static-header-link {
