--- a/css/profile-components-style.css
+++ b/css/profile-components-style.css
@@ -20,8 +20,8 @@ span.spn-github-icon {
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
-    border-color: #e6e6e6;
-    background: transparent;
+    border-color: #2e2e2e;
+    background: #0d1116;
     color: #e6e6e6;
     width: 250px;
     padding: 2px 10px;
@@ -31,8 +31,8 @@ span.spn-github-icon {
 .header-input-search:focus {
     width: 350px;
     outline: none;
-    background: #fff;
-    color: #3e3e3e;
+    border-color: #68a4ff;
+    color: #fff;
 }
 
 
