--- a/css/profile-components-style.css
+++ b/css/profile-components-style.css
@@ -78,6 +78,30 @@ div.header-user-controls span.spn-user-profile > #fa-user-icon {
 }
 
 /* Navbar with menu options */
-nav.nav-menu {
+nav.navbar-options {
     width: 100%;
+    border-bottom: solid 1px #757575;
+    padding: 0 12.5px;
+}
+nav.navbar-options > .nav-item {
+    display: inline-flex;
+    padding: 16px 12.5px;
+    margin: 0;
+    box-sizing: border-box;
+    transition: ease-in-out 0.15s;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: transparent;
+}
+nav.navbar-options > .nav-item:hover {
+    cursor: pointer;
+}
+nav.navbar-options > .nav-item > .nav-icon {
+    margin-right: 10px;
+}
+nav.navbar-options > .nav-item > .notification-icon {
+    padding: 2.5px 5px;
+    margin-left: 10px;
+    border-radius: 25px;
+    font-size: 0.8em;
 }
