--- a/css/profile-dark-components-style.css
+++ b/css/profile-dark-components-style.css
@@ -11,3 +11,24 @@
     filter: contrast(0.5);
     cursor: pointer;
 }
+
+/* Navbar options component */
+.dark-theme nav.navbar-options {
+    color: #fff;
+}
+.dark-theme nav.navbar-options > .nav-item {
+    color: #9c9c9c;
+}
+.dark-theme nav.navbar-options > .nav-item:hover {
+    color: #fff;
+    border-bottom-color: #acacac;
+}
+nav.navbar-options > .nav-item > .notification-icon {
+    color: #b3b3b3;
+    background: #3a3944;
+}
+.dark-theme nav.navbar-options > .selected-item {
+    color: #fff;
+    font-weight: bold;
+    border-bottom-color: #ff5100 !important;
+}
