--- a/css/custom-profile-style.css
+++ b/css/custom-profile-style.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    overflow-x: hidden;
 }
 html, body * {
     box-sizing: border-box;
