Top small box with some user informations

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -13,3 +13,9 @@
     float: right;
     font-size: 20px;
 }
+
+#about-me-mobile {
+    display: flex;
+    padding: 10px 17.5px;
+    /* border: solid 2px red; */
+}
