--- a/css/responsive-control.css
+++ b/css/responsive-control.css
@@ -1,12 +1,14 @@
 @media only screen and (min-width : 900px) {
     #header-default { display: flex; }
     #header-mobile { display: none; }
+    section#about-me-mobile { display: none; }
     #span-toggle-theme { display: flex; }
 }
 
 @media only screen and (max-width : 900px) {
     #header-default { display: none; }
     #header-mobile { display: flex; }
+    #about-me-mobile { display: flex; }
     #span-toggle-theme { display: none; }
 }
 
