--- a/css/profile-light-components-style.css
+++ b/css/profile-light-components-style.css
@@ -36,3 +36,30 @@
 /* Toggle theme button */
 .light-theme span.toggle-theme > .theme-turn-on::before { content: attr(light-value); }
 .light-theme span.toggle-theme { color: #3e3e3e; }
+
+/* About me section */
+.light-theme #about-me-mobile {
+    color: #000;
+}
+.light-theme #about-me-mobile .profile-picture img { border-color: #636363; filter: drop-shadow(0px 0px 5px #3e3e3e); }
+.light-theme #about-me-mobile .profile-name .username { color: #505050; }
+.light-theme #about-me-mobile .about-me-status {
+    border-color: #535353;
+    color: #505050;
+}
+.light-theme #about-me-mobile .about-me-status .status-label { color: #00b637; }
+.light-theme #about-me-mobile .about-me-status .status-pill {
+    background: #009e2f;
+    color: #fff;
+}
+.light-theme #about-me-mobile .about-me-title .title-label { color: #0011ff; }
+.light-theme #about-me-mobile .see-profile {
+    border-color: #a0a0a0;
+    color: #222222;
+    background: #dadada;
+}
+.light-theme #about-me-mobile .see-profile:hover {
+    border-color: #838383;
+    background: #a0a0a0;
+    cursor: pointer;
+}
